--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -1,16 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape
-            android:shape="rectangle">
-            <corners
-                android:bottomLeftRadius="20dp"
-                android:topLeftRadius="20dp"
-                android:topRightRadius="20dp"
-                android:bottomRightRadius="20dp"
-                android:radius="10dp" />
-                <solid
-                    android:color="#F38B8B"/>
+        <shape android:shape="rectangle">
+            <corners android:bottomLeftRadius="20dp" android:topLeftRadius="20dp" android:topRightRadius="20dp" android:bottomRightRadius="20dp" android:radius="10dp" />
+            <solid android:color="#F38B8B" />
         </shape>
     </item>
 
@@ -24,8 +17,7 @@
                 android:topRightRadius="20dp"
                 android:bottomRightRadius="20dp"
                 android:radius="10dp" />
-                <solid
-                    android:color="#F38B8B"/>
+                <solid android:color="#F38B8B" />
             </corners>
         </shape>
     </item>
