--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -3,9 +3,9 @@
     <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle">
         <Colors>
-            <startcolor>android:startColor="@color/gradient_start"</startcolor>
-            <centercolor>android:centerColor="@color/gradient_center"</centercolor>
-            <endcolor>android:endColor="@color/gradient_end"</endcolor>
+            <startcolor></startcolor>
+            <centercolor></centercolor>
+            <endcolor></endcolor>
             <angle>android:angle="-45" /></angle>
         </Colors>
     </shape>
