--- a/app/src/main/res/anim/fadein.xml
+++ b/app/src/main/res/anim/fadein.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<alpha xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="5000"
-    android:fromAlpha="0.0"
-    android:interpolator="@android:anim/slide_out_right"
-    android:toAlpha="1.0"></alpha>
+<set xmlns:android="http://schemas.android.com/apk/res/android">
+    <alpha
+        android:fromAlpha="0.0"
+        android:toAlpha="1.0"
+        android:fillAfter="true"
+        android:duration="5000"
+        />
+</set>
